--- a/css/index.css
+++ b/css/index.css
@@ -136,3 +136,11 @@ button[disabled=disabled], button:disabled {
 .paciente-invalido{
 	background-color: lightcoral;
 }
+
+#mensagem-erro{
+	color: red;
+	font-weight: bold;
+	font-size: 15px;
+	display: block;
+	padding: 5px;
+}
